# learn-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  shader.h
backup/: CMakeLists.txt  main.cpp
include/: camera.h  cube.h  mesh.h  model.h
include/shaders/: shader.fs  shader.h  shader.vs
include/shaders/lighting/: object.frag  object.vert
shaders/1.Getting-Started/: shader.fs  shader.h  shader.vs
src/: 1.1.Hello-Window.cpp  1.3.Shaders.cpp  1.5.Transformations.cpp  1.6.Coordinate-Systems.cpp  1.7.Camera.cpp  2.1.Colors.cpp  2.2.Basic-Lighting.cpp  2.3.Materials.cpp  2.4.Lighting-Maps.cpp  3.Model-Loading.cpp
src/1.Getting-Started/: 1.1.Hello-Window.cpp  1.2.Hello-Triangle.cpp  1.3.Shaders.cpp
